fixed a key part where the main window was not showing as a configuration in the main electron process. and added default padding to the global.css

--- a/renderer/global.css
+++ b/renderer/global.css
@@ -11,4 +11,6 @@ html, body, main {
     width: 100vw;
     padding: 0;
     margin: 0;
+    overflow-x: hidden !important;
+
 }
